--- a/src/main/resources/templates/review/list.html
+++ b/src/main/resources/templates/review/list.html
@@ -36,5 +36,10 @@
 		<h1 class="subcategory-list-title"></h1>
 		<table class="review-item-table"></table>
 	</div>
+	<div class="reivew-list-paging">
+
+
+	
+	</div>
 </body>
 </html>
