--- a/src/main/resources/templates/account/account.html
+++ b/src/main/resources/templates/account/account.html
@@ -18,8 +18,8 @@
 				<input class="pw" type="password" name="pw" maxlength="50">
 			</form>
 				<button class="login-btn">Login</button>
-			<a class="signform-call-btn">아이디가 없으신가요?</a>
-			<a class="findform-call-btn">아이디/비밀번호를 잊으셨나요?</a>
+			<a class="signform-call-btn">회원가입</a>
+			<a class="findform-call-btn">아이디/비밀번호를 찾기</a>
 		</div>
 
 
@@ -41,7 +41,7 @@
 				<img class="pw2-check-icon" src="../img/icon/error.png"><br />
 			</form>
 				<button class="sign-btn">Sign Up</button>
-			<a class="loginform-call-btn">이미 아이디가 있으신가요?</a>
+			<a class="loginform-call-btn">로그인 화면으로 돌아갈까요?</a>
 		</div>
 		
 				<div class="box" id="find-box">
