--- a/src/main/resources/templates/review/list.html
+++ b/src/main/resources/templates/review/list.html
@@ -13,7 +13,16 @@
 		<h1 class="overlay-plus">+</h1>
 		<h1 class="overlay-info">자세히 보러가기</h1>
 	</div>
-	<h2 class="subcategory-title">리뷰</h2>
+	<div class="category">
+	<div class="main-category">
+	<h2>메인 카테고리</h2>
+	<a>기능별 카테고리</a><a>기능별 카테고리</a><a>기능별 카테고리</a><a>기능별 카테고리</a>
+	</div>
+	<div class="sub-category"></div>
+	<h2>서브 카테고리</h2>
+		<a>선풍기</a><a>선풍기</a><a>선풍기</a><a>선풍기</a><a>선풍기</a><a>선풍기</a><a>선풍기</a>
+	</div>
+	<h2 class="subcategory-title">카테고리 - </h2>
 	<div class="list-menu">
 		<h1>상세검색</h1>
 		<div class="menu-sec">
