--- a/src/main/resources/static/css/account/account.css
+++ b/src/main/resources/static/css/account/account.css
@@ -56,10 +56,9 @@ input{
 	border: 1px solid crimson;
     background: crimson;
     color: white;
-    border-radius: 5%;
+    border-radius: 5px;
     padding: 5%;
-    width: 96%;
-    margin-left: 2%;
+    width: 90%;
     cursor: pointer;
     letter-spacing: 2px;
 }
