--- a/src/main/resources/static/css/review/list.css
+++ b/src/main/resources/static/css/review/list.css
@@ -1,21 +1,21 @@
 @charset "UTF-8";
 .subcategory-title{
 	color:crimson;
-	margin-left:8vw;
-	font-size:2vw;
+	margin-left:20vw;
+	font-size:1.5vw;
 	font-family: 'NanumSquareRound',sans-serif;
 	margin-top:0;
 }
 .list-menu{
-    width: 76vw;
-    height: 30vh;
-    margin-left: 10vw;
+    width: 58vw;
+    height: 22vh;
+    margin-left: 20vw;
     border: 1px solid gray;
     background: whitesmoke;
-    padding: 2vw;
+    padding: 1vw;
 }
 .menu-sec{
-	margin-left:5vw;
+	margin-left:2vw;
 	margin-bottom:3vh;
 }
 .menu-sec img{
@@ -28,12 +28,12 @@
 }
 .menu-sec label{
 	margin-right:1%;
-	font-size:1vw;
+	font-size:.8vw;
 }
 .list-menu h1{
-	font-weight:100;
-	font-size:1.5vw;
-	margin-left:3vw;
+    font-weight: 100;
+    font-size: 1vw;
+    margin-left: 2vw;
 }
 .list-menu h2{
 	font-weight:100;
@@ -41,9 +41,9 @@
 	color:grey;
 }
 .review-list{
-	width: 80vw;
-	margin:2vh 8vw;
-	padding:2vw;
+    width: 60vw;
+    margin: 2vh 18vw;
+    padding: 2vw;
 }
 .subcategory-list-title{
 	font-size: 1.3vw;
@@ -101,7 +101,7 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
     white-space: nowrap; 
-    width:50vw;
+    width:40vw;
 }
 .review-item-regdate{
 	color:grey;
@@ -122,9 +122,9 @@
 }
 .overlay{
     border: 1px solid crimson;
-    margin-left: 10vw;
+    margin-left: 20vw;
     background: crimson;
-    opacity: .8;
+    opacity: .7;
     position: absolute;
     cursor: pointer;
     display:none;
@@ -146,7 +146,7 @@
 .reivew-list-paging a{
 	color:grey;
 	cursor:pointer;
-	font-size:1.2vw;
+	font-size:.8vw;
 	margin:0;
 	padding:1%;
 	border:1px solid white;
@@ -155,4 +155,19 @@
 	border:1px solid crimson;
 	color:crimson;
 	border-radius:5px;
+}
+.category{
+	width: 58vw;
+    margin-left: 20%;
+    padding-bottom:4vh;
+    padding-left:2vw;
+    border:1px solid;
+    margin-bottom:3vh;
+    font-family: 'Nanum Gothic', sans-serif;
+}
+.category h2{
+	font-size:1vw;
+}
+.category a{
+	margin-right:.8vw;
 }
