리스트페이지 메인카테고리,서브카테고리 링크 연결 및 데이터바인딩 완료

--- a/src/main/resources/static/css/review/list.css
+++ b/src/main/resources/static/css/review/list.css
@@ -167,7 +167,11 @@
 }
 .category h2{
 	font-size:1vw;
+	color: crimson;
 }
 .category a{
 	margin-right:.8vw;
+	cursor: pointer;
+	text-decoration: none;
+	color:black;
 }
