--- a/src/main/resources/templates/review/list.html
+++ b/src/main/resources/templates/review/list.html
@@ -14,13 +14,12 @@
 		<h1 class="overlay-info">자세히 보러가기</h1>
 	</div>
 	<div class="category">
-	<div class="main-category">
 	<h2>메인 카테고리</h2>
-	<a>기능별 카테고리</a><a>기능별 카테고리</a><a>기능별 카테고리</a><a>기능별 카테고리</a>
+	<div class="main-category">
 	</div>
-	<div class="sub-category"></div>
 	<h2>서브 카테고리</h2>
-		<a>선풍기</a><a>선풍기</a><a>선풍기</a><a>선풍기</a><a>선풍기</a><a>선풍기</a><a>선풍기</a>
+	<div class="sub-category">
+	</div>
 	</div>
 	<h2 class="subcategory-title">카테고리 - </h2>
 	<div class="list-menu">
