--- a/src/main/resources/templates/review/list.html
+++ b/src/main/resources/templates/review/list.html
@@ -24,11 +24,8 @@
 	<h2 class="subcategory-title">카테고리 - </h2>
 	<div class="list-menu">
 		<h1>상세검색</h1>
-		<div class="menu-sec">
+		<div class="menu-sec" id="man-company">
 			<h2>제조사</h2>
-			<input type="checkbox"><label>삼성</label> <input
-				type="checkbox"><label>LG</label>
-
 		</div>
 		<div class="menu-sec">
 			<h2>판매가</h2>
