상세검색 기능 완료(중복코드 정리 필요)

--- a/src/main/resources/templates/review/list.html
+++ b/src/main/resources/templates/review/list.html
@@ -29,10 +29,11 @@
 		</div>
 		<div class="menu-sec">
 			<h2>판매가</h2>
-			<input type="checkbox"><label>1만원 이하</label> <input
-				type="checkbox"><label>1~10만원</label> <input type="checkbox"><label>10~50만원</label>
-			<input type="checkbox"><label>50~100만원</label> <input
-				type="checkbox"><label>100만원이상</label> <label>직접입력 :</label><input
+			<input type="checkbox" class="price-checkbox" value="10000"><label>1만원 이하</label> 
+			<input type="checkbox" class="price-checkbox" value="'10000' AND '100000'"><label>1만원 ~ 10만원 </label> 
+			<input type="checkbox" class="price-checkbox" value="'100000' AND '1000000'"><label>10만원 ~ 100만원 </label> 
+			<input type="checkbox" class="price-checkbox" value="1000000"><label>100만원이상</label> 
+			<label>직접입력 :</label><input
 				class="review-search" type="text"> <img
 				src="../img/icon/magnifier.png">
 		</div>
