--- a/src/main/resources/templates/review/list.html
+++ b/src/main/resources/templates/review/list.html
@@ -5,7 +5,7 @@
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="../js/review/list.js"></script>
 <link rel="stylesheet" href="../css/review/list.css">
-<title>Insert title here</title>
+<title> 리뷰 리스트</title>
 </head>
 <body>
 	<div class="header"></div>
