--- a/src/main/resources/templates/account/account.html
+++ b/src/main/resources/templates/account/account.html
@@ -5,7 +5,7 @@
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="./js/account/account.js"></script>
 <link rel="stylesheet" href="./css/account/account.css">
-<title>Insert title here</title>
+<title>로그인,회원가입,회원정보 찾기</title>
 </head>
 <body>
 	<div class="header"></div>
