--- a/src/main/resources/static/css/review/read.css
+++ b/src/main/resources/static/css/review/read.css
@@ -1,11 +1,6 @@
 @charset "UTF-8";
 .product{
-	width:60vw;
-	margin-left:20vw;
-	border:1px solid grey;
-	background:whitesmoke;
-	height:50vh;
-	box-shadow: 1px 1px 3px grey;
+    width: 100vw;
 }
 .review{
 	margin-top:5vh;
@@ -14,4 +9,22 @@
 	border:1px solid grey;
 	min-height:100vh;
 	box-shadow: 1px 1px 3px grey;
+}
+.product-box{
+	padding-left: 34%;
+}
+#product-thumnail-box{
+    width: 30%;
+    height: 100%;
+}
+.product-thumnail{
+    width: 100%;
+    height: 70%;
+}
+#product-info-box{
+    width: 50%;
+    height: 90%;
+}
+.product h1{
+	text-align:center;
 }
