--- a/src/main/resources/static/css/review/list.css
+++ b/src/main/resources/static/css/review/list.css
@@ -175,5 +175,8 @@
 	margin-right:.8vw;
 	cursor: pointer;
 	text-decoration: none;
-	color:black;
+	color:grey;
+}
+.select-category{
+	font-weight: bold;
 }
