리뷰 페이지 상품,리뷰 css처리

--- a/src/main/resources/static/css/include/header.css
+++ b/src/main/resources/static/css/include/header.css
@@ -17,9 +17,9 @@ body{
 	font-family: 'Nanum Gothic', sans-serif;
 }
 h1{
-	font-family: 'Jua', cursive;
+	font-family: 'Nanum Gothic', sans-serif;
 	letter-spacing: 1px;
-	font-weight: 500;
+	font-weight: 1000;
 }
 p{
 	font-family: 'NanumSquareRound',sans-serif;
