spring security 적용(기존 account 주석처리 정리필요,exception 핸들링 필요)

--- a/src/main/resources/static/include/header.html
+++ b/src/main/resources/static/include/header.html
@@ -6,6 +6,9 @@
 <script src="../js/include/header.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Damion&display=swap" rel="stylesheet">
+<!-- <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+default header name is X-CSRF-TOKEN
+<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/> -->
 </head>
 <meta charset="utf-8">
 
