주석삭제 및 로그아웃버튼추가

--- a/src/main/resources/static/include/header.html
+++ b/src/main/resources/static/include/header.html
@@ -22,6 +22,8 @@ default header name is X-CSRF-TOKEN
 </div>
 <img class="login-icon" src="../img/icon/round-account-button.png">
 <div class="title">
+<form action="/logout" method="post">
+<input class="logout-btn" type="submit" value="로그아웃"></form>
 <div class="search">
 	<input class="search-text" type="text" maxlength="40" placeholder="검색어를 입력해주세요.">
 	<img class="search-icon" id="search-toggle-btn"src="../img/icon/magnifier.png">
