로그인여부 확인 메소드추가,로그인 로그아웃 아이콘추가,로그인 여부에 따라 토글기능 추가,로그인 시 로그인페이지 차단 기능 추가

--- a/src/main/resources/static/css/include/header.css
+++ b/src/main/resources/static/css/include/header.css
@@ -159,6 +159,11 @@ a{
 .main-category-list{
 	margin-bottom:10%;
 }
-.logout-btn{
-	width:10%;
+.logout-icon{
+	position: absolute;
+    width: 2.2vw;
+    margin-top: 2.7vh;
+    margin-left: 93vw;
+    z-index: 100;
+    cursor: pointer;
 }
