--- a/src/main/resources/static/include/header.html
+++ b/src/main/resources/static/include/header.html
@@ -20,10 +20,10 @@ default header name is X-CSRF-TOKEN
 <div class="nav-bar">
 <button class="nav-toggle-btn" id="toggle-off"><img class="nav-toggle-icon" src="../img/icon/list.png"></button>
 </div>
-<img class="login-icon" src="../img/icon/round-account-button.png">
+<img class="login-icon" src="../img/icon/login.png">
+<img class="logout-icon" src="../img/icon/logout.png">
 <div class="title">
-<form action="/logout" method="post">
-<input class="logout-btn" type="submit" value="로그아웃"></form>
+
 <div class="search">
 	<input class="search-text" type="text" maxlength="40" placeholder="검색어를 입력해주세요.">
 	<img class="search-icon" id="search-toggle-btn"src="../img/icon/magnifier.png">
