리스트 페이지 라벨 변경

--- a/src/main/resources/templates/review/list.html
+++ b/src/main/resources/templates/review/list.html
@@ -29,10 +29,10 @@
 		</div>
 		<div class="menu-sec">
 			<h2>판매가</h2>
-			<input type="checkbox" class="price-checkbox" value="10000"><label>1만원 이하</label> 
-			<input type="checkbox" class="price-checkbox" value="'10000' AND '100000'"><label>1만원 ~ 10만원 </label> 
-			<input type="checkbox" class="price-checkbox" value="'100000' AND '1000000'"><label>10만원 ~ 100만원 </label> 
-			<input type="checkbox" class="price-checkbox" value="1000000"><label>100만원이상</label> 
+			<input type="checkbox" class="price-checkbox" value="10000" id="price1"><label for="price1">1만원 이하</label> 
+			<input type="checkbox" class="price-checkbox" value="'10000' AND '100000'" id="price2"><label for="price2">1만원 ~ 10만원 </label> 
+			<input type="checkbox" class="price-checkbox" value="'100000' AND '1000000'" id="price3"><label for="price3">10만원 ~ 100만원 </label> 
+			<input type="checkbox" class="price-checkbox" value="1000000" id="price4"><label for="price4">100만원이상</label> 
 			<label>직접입력 :</label><input
 				class="review-search" type="text"> <img
 				src="../img/icon/magnifier.png">
