--- a/src/main/resources/static/css/review/insert.css
+++ b/src/main/resources/static/css/review/insert.css
@@ -1,12 +1,85 @@
 @charset "UTF-8";
-#cke_p_content{
-	width:70%;
-	margin-left:15%;
+#cke_p-content{
+	width:60%;
+	margin-left:20%;
 }
 
 .cke_editable{
-	width:96%;
+	width:100%;
+	padding:1%;
 }
 .cke_editable img{
-	max-width:98%;
+	max-width:100%;
+}
+#review-title{
+	margin-left: 20%;
+    width: 60%;
+    height: 3vh;
+}
+#review-submit-btn{
+	margin-left: 77.5%;
+    margin-top: 1%;
+    font-size: .8vw;
+    border: none;
+    background: crimson;
+    letter-spacing: 1px;
+    font-weight: bold;
+    padding: 0.5%;
+    color: white;
+    cursor:pointer;
+}
+.category-box{
+	width:60%;
+	height:30vh;
+	margin-bottom:1%;
+	overflow:hidden;
+	margin-left:20%;
+}
+
+.select-box{
+    width: 22%;
+    margin-left: 2%;
+    box-shadow: 0px 0px 1px grey;
+    height: 98%;
+    overflow-x: hidden;
+    display: inline-block;
+}
+.select-box h4{
+	text-align: center;
+    background: crimson;
+    color: white;
+    padding: 1%;
+    margin: 1%;
+}
+.select-box ul{
+	padding-left:0;
+	padding: 0;
+    margin: 0;
+    min-height:50%;
+}
+.select-box li{
+	list-style: none;
+    padding: 3% 0;
+	cursor:pointer;
+	width: 100%;
+	text-align:center;
+}
+.select-box li:hover{
+	background:crimson;
+	color:white;
+}
+.product-info{
+    overflow-x: hidden;
+    display: inline-block;
+    width: 60%;
+    margin-left:21%;
+    margin-bottom:2%;
+}
+.insert-body h1{
+	margin-left:20%;
+	color:crimson;
+}
+.select-category{
+	background:crimson;
+	color:white;
 }
