--- a/src/main/resources/static/include/header.html
+++ b/src/main/resources/static/include/header.html
@@ -20,8 +20,10 @@ default header name is X-CSRF-TOKEN
 <div class="nav-bar">
 <button class="nav-toggle-btn" id="toggle-off"><img class="nav-toggle-icon" src="../img/icon/list.png"></button>
 </div>
+<div class="icon">
 <img class="login-icon" src="../img/icon/login.png">
 <img class="logout-icon" src="../img/icon/logout.png">
+</div>
 <div class="title">
 
 <div class="search">
