--- a/src/main/resources/static/css/account/account.css
+++ b/src/main/resources/static/css/account/account.css
@@ -12,7 +12,7 @@ body{
     width: 20vw;
     height: 55vh;
     margin: 10vh 36vw;
-    border: 2px solid crimson;
+    border: 2px solid #F28705;
     position: absolute;
     padding: 1% 5%;
     background:whitesmoke;
@@ -23,11 +23,11 @@ body{
 	text-align: center;
 	margin-bottom:2vh;
 	font-size:2.5vw;
-	color: crimson;
+	color: #F28705;
 	letter-spacing: 2px;
 }
 label{
-	color: black;
+	color: #F29F05;
 	letter-spacing: 1px;
 }
 input{
@@ -49,12 +49,12 @@ input{
 	font-size:1.2vw;
 }
 #login-box input{
-	border:4px solid crimson;
+	border:2px solid #F2B705;
 	font-size:1vw;
 }
 .account button{
-	border: 1px solid crimson;
-    background: crimson;
+	border: 1px solid #ff9500;
+    background: #ff9500;
     color: white;
     border-radius: 5px;
     padding: 5%;
@@ -63,7 +63,7 @@ input{
     letter-spacing: 2px;
 }
 .account button:hover{
-	color:black;
+	background:#F28705;
 	transition:.5s;
 }
 .login-btn{
@@ -90,7 +90,7 @@ input{
 	font-size:1vw;
 }
 #sign-box input{
-	border:3px solid crimson;
+	border:3px solid #F2B705;
 	font-size:.8vw;
 }
 .sign-btn{
