--- a/src/main/resources/static/include/header.html
+++ b/src/main/resources/static/include/header.html
@@ -18,17 +18,17 @@ default header name is X-CSRF-TOKEN
 </div>
 
 <div class="nav-bar">
-<button class="nav-toggle-btn" id="toggle-off"><img class="nav-toggle-icon" src="../img/icon/list.png"></button>
+<button class="nav-toggle-btn" id="toggle-off"><img class="nav-toggle-icon" src="../img/icon/list.png" title="메뉴"></button>
 </div>
 <div class="icon">
-<img class="login-icon" src="../img/icon/login.png">
-<img class="logout-icon" src="../img/icon/logout.png">
+<img class="login-icon" src="../img/icon/login.png" title="로그인">
+<img class="logout-icon" src="../img/icon/logout.png" title="로그아웃">
 </div>
 <div class="title">
 
 <div class="search">
 	<input class="search-text" type="text" maxlength="40" placeholder="리뷰 검색어를 입력해주세요.">
-	<img class="search-icon" id="search-toggle-btn"src="../img/icon/magnifier.png">
+	<img class="search-icon" id="search-toggle-btn"src="../img/icon/magnifier.png" title="검색">
 </div>
 
 <a href="/">Review Web Site</a>
