--- a/src/main/resources/templates/review/insert.html
+++ b/src/main/resources/templates/review/insert.html
@@ -56,7 +56,7 @@
 	<h1>리뷰작성</h1>
 	<input id="review-title" type="text" maxlength="50" placeholder="리뷰제목">
 	<textarea class="form-control" id="p-content"></textarea>
-	<button id="review-submit-btn">등록</button>
+	<img src="../img/icon/write.png" id="review-submit-btn" title="리뷰작성">
 </div>
 </body>
 </html>
