--- a/src/main/resources/templates/review/read.html
+++ b/src/main/resources/templates/review/read.html
@@ -9,12 +9,13 @@
 </head>
 <body>
 <div class="header"></div>
+<img src="../img/icon/left-arrow.png" class="list-btn" title="목록으로">
 <div class="product">
 
 </div>
 <div class="review">
 </div>
-<a class="list-btn">목록으로</a>
+<img src="../img/icon/left-arrow.png" class="list-btn" title="목록으로">
 <div class="comment">
 </div>
 </body>
