--- a/src/main/resources/templates/review/list.html
+++ b/src/main/resources/templates/review/list.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 	<div class="review-list">
-		<h1 class="subcategory-list-title"></h1><img class="write-btn" src="../img/icon/write.png">
+		<h1 class="subcategory-list-title"></h1><img class="write-btn" src="../img/icon/write.png" title="리뷰작성">
 		<table class="review-item-table"></table>
 	</div>
 	<div class="reivew-list-paging">
