review 및 새로운 product insert method 구현(몇몇부분 수정필요) , 제조사 선택시 product name 데이터바인딩 및 클릭이벤트 적용

--- a/src/main/resources/static/css/review/insert.css
+++ b/src/main/resources/static/css/review/insert.css
@@ -65,10 +65,13 @@
 }
 .product-info{
     overflow-x: hidden;
-    display: inline-block;
-    width: 60%;
-    margin-left:21%;
-    margin-bottom:2%;
+    display: none;
+    width: 58%;
+    margin-bottom: 2%;
+    margin-left: 21%;
+}
+.product-info input{
+	width:23%;
 }
 .insert-body h1{
 	margin-left:20%;
