--- a/src/main/resources/templates/review/insert.html
+++ b/src/main/resources/templates/review/insert.html
@@ -36,22 +36,22 @@
 		<h4>PRODUCT NAME</h4>
 		<ul></ul>
 	</div>
-	
 
 	</div>
-		<div class="product-info">
-		<label for="product-name" id="product-name-label">제품명</label>
-		<input type="text" id="product-name" maxlength="30">
-		<label for="product-company">제조사</label>
-		<select name="product-company">   
-		<option value="삼성">삼성</option>
-		<option value="엘쥐">엘쥐</option>
-		</select> 
-		<label for="product-price">가격</label> 
-		<input type="text" id="product-price" maxlength="30"> 
-		<label for="product-regdate">제조일자</label> 
-		<input type="text" id="product-regdate">
-	</div>
+		<div class="product-info" id="others-info">
+		<label for="product-name" id="product-name-label">제품명</label><br/>
+		<input type="text" id="product-name" maxlength="30"><br/>
+		<label for="product-company">제조사</label><br/>
+		<input type="text" id="product-company" maxlength="30"> <br/>
+		<label for="product-price">가격(원)</label> <br/>
+		<input type="text" id="product-price" maxlength="30"> <br/>
+		<label for="product-regdate">출시일</label> <br/>
+		<input type="text" id="product-regdate"> <br/>
+		<label for="product-img">이미지</label> <br/>
+		<input type="file" id="product-img">
+		</div>
+		<div class="product-info" id="product-info">
+		</div>
 
 	<h1>리뷰작성</h1>
 	<input id="review-title" type="text" maxlength="50" placeholder="리뷰제목">
