새상품 리뷰등록 및 기존상품 리뷰등록 완성, 유효성체크 추가, 제품 이미지경로 수정, 제품 평점등록 추가,THUM_TEXT 컬럼 삭제 후 정규식으로 텍스트 추출로 변경

--- a/src/main/resources/static/css/review/insert.css
+++ b/src/main/resources/static/css/review/insert.css
@@ -81,3 +81,11 @@
 	background: #262626;
 	color:white;
 }
+#review-rating{
+	margin-left: 20%;
+}
+#review-rating img{
+	margin-left:8%;
+	width:5%;
+	cursor: pointer;
+}
